<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:context=".ui.report_list.AddReportFragment">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/contact_bloc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/report_temperature_label" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/report_add_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="50dp"
                    android:background="@drawable/contact_buttons_background"
                    android:padding="10dp"
                    android:text="@string/add" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.santalu.maskara.widget.MaskEditText
                    android:id="@+id/report_temperature_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Температура"
                    android:inputType="numberDecimal"
                    android:layout_weight="1"
                    app:mask="##.#"/>
                <TextView
                    android:id="@+id/report_time_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:hint="Время"
                    android:layout_weight="1"
                    android:onClick="makeTimePicker"
                    android:padding="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/report_temperature_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_bloc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/footer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_contacts_label"
                android:layout_weight="1"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/report_contacts_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:listitem="@layout/report_contact_list_item"
                android:layout_weight="1"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/report_add_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_add_contact"
                android:padding="10dp"
                android:background="@drawable/contact_buttons_background"
                android:layout_weight="1"/>
            <FrameLayout
                android:id="@+id/new_contact_add_contact_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contact_bloc">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/report_close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/contact_buttons_background"
                android:text="@string/report_close_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/report_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="100dp"
                android:background="@drawable/contact_buttons_background"
                android:text="@string/report_save_button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="9dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_date_label" />

            <TextView
                android:id="@+id/report_date_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textColor="#000"
                android:padding="5dp"
                android:onClick="makeDatePicker"
                android:background="#eee"
                android:layout_marginVertical="10dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>